corpus/c/redefinition/case-01/snapshots/gcc15_plus/dual_sink_structured/render.ci.txt
src/main.c:2:5: error: duplicate definition detected
help: add or fix include guards, or remove the duplicate definition
why: redefinition of 'counter'
| src/main.c:2:5
| int counter = 1;
|     ^
note: previous definition of 'counter' with type 'int'
raw: rerun with --formed-profile=raw_fallback to inspect the original compiler output